# qupdevstaking

./: .gitignore  .rust-toolchain.toml  Anchor.toml  Cargo.toml  LICENSE  QUPDEV_MINTADDRESS  README.md  build_initialize_vault.sh  devnet_program_ID  devnet_token_metadata.json  distribute_tokens.sh  distribute_tokens.sh.bak  final_vault_init.js  fix_borrow.py  fix_claims.py  fix_solana.sh  get_discriminator.js  github_setup_script.sh  index.html  index.html.bak  index.html_syntax  initialize_vault.js  latest_lessons.md  lessons.md  lessons_mainnet.md  manual_vault_init.js  manual_vault_init_fixed.js  metadata.js  new_lessons_learned.md  package-lock.json  package.json  qup_builder.sh  qup_mainnet_deploy.md  qupdevstaking.html  qupdevstaking.html.backup  qupdevstaking.html.bak  qupmainnet.md  simple_vault_init.js  temp_check.js  test_init.js  (+7 more)
.github/workflows/: deploy.yml
keypairs/: new_qup_staking.json
programs/new_qup_staking/: Cargo.toml  Cargo.toml.backup
programs/new_qup_staking/src/: lib.rs  lib.rs.backup
tests/: initialize.js  new_qup_staking.js  new_qup_staking.ts
vault_package/: anchor_init.js  compute_pda.js  new_qup_staking_env_summary.txt  package-lock.json  package.json  package.json.backup  package.json.bak  package.json.old  qup_vault_build_summary.txt  success_log.txt  test_tokens.env
vault_package/new_qup_staking/vault_package/: qup_vault_build_summary.txt
vault_package/output/: qup_vault_build_summary.txt
